--- a/Graphics Beginner/Graphics Beginner.vcxproj.filters
+++ b/Graphics Beginner/Graphics Beginner.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="first_app.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lve_pipeline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lve_device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lve_window.h">
@@ -32,5 +38,16 @@
     <ClInclude Include="first_app.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lve_pipeline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lve_device.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\simple_shader.vert" />
+    <None Include="shaders\simple_shader.frag" />
+    <None Include="compile.bat" />
   </ItemGroup>
 </Project>
